--- a/GoorumMode/ko.lproj/Localizable.strings
+++ b/GoorumMode/ko.lproj/Localizable.strings
@@ -5,3 +5,87 @@
   Created by 박소진 on 2023/09/26.
   
 */
+
+//MARK: - MoodCollectionViewCell
+"modify_AccessibilityHint" = "수정하려면 두 번 탭 하세요";
+
+//MARK: - MoodViewController @@@
+"cellRegistration_AccessibilityLabel" = "%@ 기록함, %@ 이미지, 한 줄 내용, %@, 자세한 내용, %@";
+"cellRegistration_AccessibilityLabel_isEmpty" = "없음";
+"calendarBarButton_AccessibilityLabel" = "달력";
+"calendarBarButton_AccessibilityHint" = "다른 날의 기록을 보려면 두 번 탭 하세요.";
+"settingBarButton_AccessibilityLabel" = "설정";
+"settingBarButton.accessibilityHint" = "언어, 테마 등을 설정하려면 두 번 탭 하세요.";
+
+//MARK: - MoodView
+"addMoodButton_AccessibilityLabel" = "기록 추가";
+"addMoodButton_AccessibilityHint" = "새로운 기분을 기록하려면 두 번 탭 하세요.";
+
+//MARK: - AddView
+"detailTextView_Placeholder" = "자세한 내용을 기록해 보세요.";
+
+"pickMoodImageView_AccessibilityLabel" = "기분 선택";
+"pickMoodImageView_AccessibilityHint" = "기분을 선택하려면 두 번 탭 하세요.";
+
+"oneLineTextField_Placeholder" = "이유는 무엇인가요?(선택/15자)";
+
+"extendButton_AccessibilityLabel" = "내용 추가";
+"extendButton_AccessibilityHint" = "자세한 내용을 작성하려면 두 번 탭 하세요.";
+
+//MARK: - PickMoodViewController
+"showDateButton_Title" = "날짜 보기";
+"showDateButton_isSelected_Title" = "기분 보기";
+
+//MARK: - PickMoodCollectionViewCell
+"moodImageView_accessibilityHint" = "기분을 선택하려면 두 번 탭 하세요.";
+
+//MARK: - PickMoodView
+"pickMoodView_TitleLabel" = "지금 기분이 어떤가요?";
+
+//MARK: - SelectDatePickerViewController
+"doneButton_Title" = "선택";
+"pickerView_Years_Comonent" = "%@년";
+"pickerView_Months_Comonent" = "%@월";
+
+//MARK: - ChartView
+"dailyButton_Title" = "일간";
+"weeklyButton_Title" = "주간";
+"monthlyButton_Title" = "월간";
+
+//MARK: - ChartTableViewCell
+"pickChartView_noDataText" = "작성된 기분이 없습니다.";
+
+//MARK: - MoodEmojis+Enum
+"smiling" = "미소 짓는";
+"neutral" = "무표정";
+"surprised" = "놀란";
+"happy" = "행복한";
+"tired" = "피곤한";
+"angry" = "화난";
+"lol" = "매우 신난";
+"embarrassed" = "당황스러운";
+"sad" = "슬픈";
+"smirking" = "능글맞은";
+"lovely" = "사랑스러운";
+"passionate" = "열정적인";
+
+//MARK: - DateFormatType+Enum
+"yearAndMouth" = "yyyy년 M월";
+"dateForTitle" = "M월 dd일 EEEE";
+"timeForAccessibility" = "a hh시 mm분";
+
+//MARK: - CustomView_CalendarHeaderView
+"backTodayButton_Title" = "오늘";
+
+//MARK: - CustomView_PlaceholderView
+"moodCollectionView_PlaceholderLabel" = "작성된 기록이 없습니다.";
+
+//MARK: - Alert
+//BaseVC
+"alert_OKButtonTitle" = "확인";
+"alert_CancelButtonTitle" = "취소";
+//AddVC
+"alert_DoneButtonClicked_Title" = "기분을 선택하세요.";
+"alert_RemoveButtonClicked_Title" = "일기가 삭제됩니다.";
+"alert_RemoveButtonTitle" = "삭제";
+"alert_OneLineTextField_isEmpty_Title" = "15자 이하로 입력해 주세요.";
