--- a/GoorumMode/ko.lproj/Localizable.strings
+++ b/GoorumMode/ko.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 //MARK: - MoodCollectionViewCell
 "modify_AccessibilityHint" = "수정하려면 두 번 탭 하세요";
 
-//MARK: - MoodViewController @@@
+//MARK: - MoodViewController
 "cellRegistration_AccessibilityLabel" = "%@ 기록함, %@ 이미지, 한 줄 내용, %@, 자세한 내용, %@";
 "cellRegistration_AccessibilityLabel_isEmpty" = "없음";
 "calendarBarButton_AccessibilityLabel" = "달력";
@@ -42,10 +42,15 @@
 //MARK: - PickMoodView
 "pickMoodView_TitleLabel" = "지금 기분이 어떤가요?";
 
-//MARK: - SelectDatePickerViewController
+//MARK: - CalendarViewController
+"mostMood_AccessibilityLabel" = "%@, 제일 많이 기록된 기분,  %@";
+"headerLabel_AccessibilityHint" = "날짜를 변경하려면 두번 탭 하세요.";
+
+//MARK: - SelectDateViewController
+"backTodayButton_AccessibilityLabel" = "오늘로 이동";
+"backTodayButton_AccessibilityHint" = "피커 항목을 오늘 날짜로 조절하려면 두 번 탭 하세요.";
 "doneButton_Title" = "선택";
-"pickerView_Years_Comonent" = "%@년";
-"pickerView_Months_Comonent" = "%@월";
+"doneButton_AccessibilityHint" = "두 번 탭 후, 뒤로 버튼을 누르면 해당 날짜에 기록을 추가할 수 있습니다.";
 
 //MARK: - ChartView
 "dailyButton_Title" = "일간";
@@ -79,7 +84,7 @@
 "backTodayButton_Title" = "오늘";
 
 //MARK: - CustomView_PlaceholderView
-"moodCollectionView_PlaceholderLabel" = "작성된 기록이 없습니다.";
+"moodCollectionView_PlaceholderLabel" = "기분을 기록해 보세요.";
 
 //MARK: - Alert
 //BaseVC
@@ -90,3 +95,7 @@
 "alert_RemoveButtonClicked_Title" = "일기가 삭제됩니다.";
 "alert_RemoveButtonTitle" = "삭제";
 "alert_OneLineTextField_isEmpty_Title" = "15자 이하로 입력해 주세요.";
+
+//MARK: - NavigationBarButton_Accessbility
+//BaseVC
+"backBarButton" = "뒤로";
