[Feat] Setting 화면 구현
- 세팅 관련 다국어 추가

--- a/GoorumMode/en.lproj/Localizable.strings
+++ b/GoorumMode/en.lproj/Localizable.strings
@@ -52,6 +52,11 @@
 "doneButton_Title" = "Select";
 "doneButton_AccessibilityHint" = "Please tap it twice, if you want to select that date. And then double tap the back button, you can add a record to that date.";
 
+//MARK: - SettingViewController
+"settingVC_Title" = "Setting";
+"setting_PrivacyPolicy" = "Privacy Policy";
+"setting_Inquiry" = "Inquiry";
+
 //MARK: - ChartView
 "dailyButton_Title" = "Daily";
 "weeklyButton_Title" = "Weekly";
