--- a/GoorumMode/ko.lproj/Localizable.strings
+++ b/GoorumMode/ko.lproj/Localizable.strings
@@ -52,6 +52,11 @@
 "doneButton_Title" = "선택";
 "doneButton_AccessibilityHint" = "두 번 탭 후, 뒤로 버튼을 누르면 해당 날짜에 기록을 추가할 수 있습니다.";
 
+//MARK: - SettingViewController
+"settingVC_Title" = "설정";
+"setting_PrivacyPolicy" = "개인정보 정책";
+"setting_Inquiry" = "문의하기";
+
 //MARK: - ChartView
 "dailyButton_Title" = "일간";
 "weeklyButton_Title" = "주간";
