--- a/GoorumMode/ko.lproj/Localizable.strings
+++ b/GoorumMode/ko.lproj/Localizable.strings
@@ -96,7 +96,7 @@
 "dateForTitle" = "M월 dd일 EEEE";
 "dateForChart" = "yyyy.MM.dd.";
 "timeForAccessibility" = "a hh시 mm분";
-"detailedDate" = "yy.MM.dd. a hh:mm";
+"detailedDate" = "yy/MM/dd a hh:mm";
 
 //MARK: - CustomView_CalendarHeaderView
 "backTodayButton_Title" = "오늘";
@@ -113,6 +113,9 @@
 "alert_RemoveButtonClicked_Title" = "일기가 삭제됩니다.";
 "alert_RemoveButtonTitle" = "삭제";
 "alert_OneLineTextField_isEmpty_Title" = "15자 이하로 입력해 주세요.";
+"alert_MoveSelectedDate" = "해당 날짜로 이동합니다.";
+"alert_searchTextIsEmpty" = "검색어를 입력해 주세요.";
+"alert_searchResultsIsEmpty" = "검색 결과가 없습니다.";
 
 //MARK: - NavigationBarButton_Accessbility
 //BaseVC
