--- a/GoorumMode/en.lproj/Localizable.strings
+++ b/GoorumMode/en.lproj/Localizable.strings
@@ -6,6 +6,8 @@
   
 */
 
+"CloudMode" = "CloudMode";
+
 //MARK: - TabBarController
 "record" = "Record";
 "chart" = "Chart";
@@ -73,7 +75,15 @@
 //MARK: - SettingViewController
 "settingVC_Title" = "Setting";
 "setting_PrivacyPolicy" = "Privacy Policy";
+
+"setting_Noti" = "Notification";
+"setting_NotiTime" = "Time";
+"setting_Info" = "Information";
 "setting_Inquiry" = "Inquiry";
+
+"setting_Version" = "Version";
+
+"setting_NotificationBody" = "How was your day today? Please write a diary!";
 
 //MARK: - SearchViewController
 "search_placeholder" = "Search your records.";
