--- a/GoorumMode/ko.lproj/Localizable.strings
+++ b/GoorumMode/ko.lproj/Localizable.strings
@@ -85,6 +85,8 @@
 
 "setting_NotificationBody" = "오늘 하루는 어땠나요? 일기를 작성해 주세요!";
 
+"setting_NotificationToast" = "알림이 설정되었습니다.";
+
 //MARK: - SearchViewController
 "search_placeholder" = "기록한 내용을 검색해 보세요.";
 
