--- a/GoorumMode/ja.lproj/Localizable.strings
+++ b/GoorumMode/ja.lproj/Localizable.strings
@@ -72,7 +72,7 @@
 "doneButton_Title" = "選択";
 "doneButton_AccessibilityHint" = "二度タップした後、後ろにボタンを押すと、その日付に記録を追加することができます。";
 
-//MARK: - SettingViewController
+//MARK: - Setting
 "settingVC_Title" = "設定";
 "setting_PrivacyPolicy" = "個人情報ポリシー";
 "setting_PrivacyPolicy_AccessibilityHint" = "プライバシーポリシーを確認したい場合は、2回タップしてください。";
@@ -81,6 +81,9 @@
 
 "setting_NotiTime" = "じかん";
 "setting_NotiTime_AccessibilityHint" = "通知時間を設定する場合は、2回タップしてください。";
+
+"setting_DiaryExport" = "PDFファイルとして保存";
+"setting_DiaryExport_AccessibilityHint" = "日記記録をPDFファイルとして保存するには2回タップ。";
 
 "setting_Info" = "じょうほう";
 "setting_Info_AccessibilityHint" = "プライバシーポリシーとして情報を確認したい場合は、2回タップしてください。";
@@ -93,6 +96,15 @@
 "setting_NotificationBody" = "今日はどうでしたか？日記を書いてください！";
 
 "setting_NotificationToast" = "通知が設定されました。";
+
+//MARK: - DiaryExportView
+"diaryExport_Placeholder" = "すべての記録をPDFファイルに保存します。";
+"diaryExport_ExportButton_Title" = "保存";
+
+"diaryExport_Progress_Text" = "保存中…";
+"diaryExport_Toast_Message" = "保存できる記録がありません。";
+
+"diaryExport_Filename_Prefix" = "雲の日記です_%@.pdf";
 
 //MARK: - SearchViewController
 "search_placeholder" = "記録した内容を検索してみてください。";
